# machine-learning-package

./: CMakeLists.txt  README.md  main.cpp  main_test.cpp  readme.md
data/: 1.py  id3_dtree_v1.txt  id3_dtree_v2.txt  id3_dtree_v2_test.txt  kmeans.txt  knnTest2.txt  logReg.txt  logReg_bak.txt  logReg_v2.txt  svm_iris_test.txt  svm_iris_train.txt  svm_test.txt  svm_train.txt
ml/: LinearRegression.cpp  LinearRegression.h  MLBase.cpp  MLBase.h  cluster.cpp  cluster.h  dbscanCluster.cpp  dbscanCluster.h  decisionTree.cpp  decisionTree.h  gmmCluster.cpp  gmmCluster.h  kmeansCluster.cpp  kmeansCluster.h  knnClassifer.cpp  knnClassifer.h  linearRegression.cpp  linearRegression.h  logisticRegression.cpp  logisticRegression.h  lvqCluster.cpp  lvqCluster.h  mlpClassifier.cpp  mlpClassifier.h  nnClassifier.cpp  nnClassifier.h  nnLayer.cpp  nnLayer.h  pcaDimReduction.cpp  pcaDimReduction.h  svmClassifier.cpp  svmClassifier.h
ml_trainer/: LinearRegressionTrainer.cpp  LinearRegressionTrainer.h  MLTrainerBase.cpp  MLTrainerBase.h  dbscanClusterTrainer.cpp  dbscanClusterTrainer.h  decisionTreeClassiferTrainer.cpp  decisionTreeClassiferTrainer.h  gmmClusterTrainer.cpp  gmmClusterTrainer.h  kmeansClusterTrainer.cpp  kmeansClusterTrainer.h  knnClassiferTrainer.cpp  knnClassiferTrainer.h  linearRegressionTrainer.cpp  linearRegressionTrainer.h  logisticClassifierTrainer.cpp  logisticClassifierTrainer.h  lvqClusterTrainer.cpp  lvqClusterTrainer.h  mlpClassifierTrainer.cpp  mlpClassifierTrainer.h  svmClassifierTrainer.cpp  svmClassifierTrainer.h
utils/: dataloder.cpp  dataloder.h  file_system_processor.cpp  file_system_processor.h  globalUtils.cpp  globalUtils.h  mnistDataloder.cpp  mnistDataloder.h
